--- a/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
@@ -19,11 +19,11 @@
             <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" 
                          HorizontalOptions="FillAndExpand">
                 <TabCtrls:CustomTabs x:Name="RutasTab" Orientation="Vertical" SelectedTabIndex="0"  
-                    SelectedColor="Lime" UnselectedColor="#791AE5" Padding="5,5,5,5"
+                    SelectedColor="DarkOrange" UnselectedColor="#791AE5" Padding="5,5,5,5"
                     VerticalOptions="Fill" HorizontalOptions="FillAndExpand">
                     <TabCtrls:CustomTabButtons Orientation="Horizontal" Margin="11, 0">
                         <TabCtrls:CustomTabButton Grid.Column="0" x:Name="InfoRutaTabButton" Text="Info. General"  
-                            BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="StartAndExpand"  
+                            BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"  
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
                             TextColor="{DynamicResource PageBackgroundColor}"/>
                         <TabCtrls:CustomTabButton Grid.Column="1" x:Name="MapaTabButton" Text="Mapa"  
